# ckeckibot_test

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
notebooks/: agent.ipynb
scripts/: vectorstore.py
src/: __init__.py  config.py
src/agent/: __init__.py  emb_models.py  nebius_agent.py  ollama_agent.py  openai_agent.py  vector_store_manager.py
src/routes/: __init__.py  chatbot.py  deps.py  documents.py
web/: package.json
web/src/: App.tsx
web/src/components/: FileList.tsx
web/src/services/: ChatbotAPI.ts  DocumentsAPI.ts
